--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@
     position: relative;
     padding: 20px;
     color: #ffffff;
-    background-image: url(./img/desktop.jpg);
+    /* background-image: url(./img/desktop.jpg); */
+    background-color: #000000;
     background-position: center;
     background-size: cover;
 }
@@ -66,4 +67,5 @@
 .container .btn:focus,
 .container .btn:active {
     transform: scale(1.3);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
